Funzione: - navigation, play e pause con text to speech

--- a/onlymusic-watch WatchKit App/Base.lproj/Interface.storyboard
+++ b/onlymusic-watch WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="15702" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="15702" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RCW-Eq-PtT">
     <device id="watch42"/>
     <dependencies>
         <deployment identifier="watchOS"/>
@@ -7,6 +7,25 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="15501"/>
     </dependencies>
     <scenes>
+        <!--Interface Controller-->
+        <scene sceneID="ien-H3-AId">
+            <objects>
+                <controller id="RCW-Eq-PtT" customClass="InterfaceController" customModule="onlymusic_watch_WatchKit_Extension">
+                    <items>
+                        <button width="1" alignment="left" title="ciaone" id="o6W-5G-0MI">
+                            <connections>
+                                <action selector="button" destination="RCW-Eq-PtT" id="2uj-H8-IZh"/>
+                                <segue destination="AgC-eL-Hgc" kind="push" id="iiV-6n-Bfj"/>
+                            </connections>
+                        </button>
+                    </items>
+                    <connections>
+                        <outlet property="button" destination="o6W-5G-0MI" id="W1L-9b-QnW"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="-212" y="-73"/>
+        </scene>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
@@ -16,7 +35,7 @@
                             <items>
                                 <group width="1" alignment="left" layout="vertical" id="GEo-N0-PMB">
                                     <items>
-                                        <label alignment="center" text="Carbonara" id="2Yb-Mx-V0c"/>
+                                        <label alignment="center" text="Polpo in umido" id="2Yb-Mx-V0c"/>
                                     </items>
                                 </group>
                                 <group alignment="center" id="iRd-hl-rJl">
